<resources>
    <string name="app_name">R.A.P</string>
    <string name="title_redditpost_detail">RedditPost Detail</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="reddit_oauth2_client_id">Hdryf5E-LdFS8Q</string>
    <string name="reddit_oauth2_redirect_uri">https://rap.example.com/reddit_oauth2_redirect_uri</string>
    <string name="reddit_oauth2_redirect_uri_fully_formed_for_token_extraction_sample_only">https://rap.example.com/reddit_oauth2_redirect_uri#access_token=7HG_ZmhrbR8g6VIZsWVOHr4rUfg&amp;token_type=bearer&amp;state=RANDOM_STRING123&amp;expires_in=3600&amp;scope=edit+flair+history+identity+modconfig+modflair+modlog+modposts+modwiki+mysubreddits+privatemessages+read+report+save+submit+subscribe+vote+wikiedit+wikiread</string>
    <string name="reddit_oauth2_scope">identity edit flair history modconfig modflair modlog modposts modwiki mysubreddits mysubscriptions privatemessages read report save submit subscribe vote wikiedit wikiread</string>
    <string name="reddit_oauth2_state">RANDOM_STRING123</string>
    <string name="reddit_oauth2_response_type">token</string>
    <string name="reddit_oauth2_url">https://www.reddit.com/api/v1/authorize</string>
    <string name="reddit_oauth2_url_fullly_formed">https://www.reddit.com/api/v1/authorize.compact?client_id=Hdryf5E-LdFS8Q&amp;response_type=token&amp;state=RANDOM_STRING123&amp;redirect_uri=https://rap.example.com/reddit_oauth2_redirect_uri&amp;scope=identity%20edit%20flair%20history%20modconfig%20modflair%20modlog%20modposts%20modwiki%20mysubreddits%20privatemessages%20read%20report%20save%20submit%20subscribe%20vote%20wikiedit%20wikiread</string>
    <string name="reddit_rap_user_agent_header">User-Agent</string>
    <string name="reddit_rap_user_agent_value">R.A.P/0.1 by cou8901</string>
    <string name="reddit_rap_authorization_header">Authorization</string>
    <string name="reddit_rap_authorization_value">bearer</string>
    <string name="reddit_access_token_key">REDDIT_ACCESS_TOKEN</string>
    <string name="reddit_access_token_missing">REDDIT_ACCESS_TOKEN_MISSING</string>
    <string name="reddit_access_token_issued_timestamp_key">REDDIT_ACCESS_TOKEN_ISSUED_TS</string>
    <string name="reddit_access_token_expire_timestamp_key">REDDIT_ACCESS_TOKEN_EXPIRE_TS</string>
    <string name="reddit_user_name_key">REDDIT_USER_NAME</string>
    <string name="url_api_v1_me">https://oauth.reddit.com/api/v1/me</string>
    <string name="key_apiv1me_id">KEY_APIV1ME_ID</string>
    <string name="key_apiv1me_name">KEY_APIV1ME_NAME</string>
    <string name="key_apiv1me_created">KEY_APIV1ME_CREATED</string>
    <string name="key_apiv1me_created_utc">KEY_APIV1ME_CREATED_UTC</string>
    <string name="key_apiv1me_has_verified_email">KEY_APIV1ME_HAS_VERIFIED_EMAIL</string>
    <string name="key_apiv1me_oauth_client_id">KEY_APIV1ME_OAUTH_CLIENT_ID</string>
    <string name="key_apiv1me_over_18">KEY_APIV1ME_OVER_18</string>
    <string name="key_user_subreddits">KEY_USER_SUBREDDITS</string>
    <string name="rup_header_label">Property Name</string>
    <string name="rup_header_value">Property Value</string>
    <string name="rup_id">Id</string>
    <string name="rup_name">Name</string>
    <string name="rup_created">Created</string>
    <string name="rup_created_utc">Created UTC</string>
    <string name="rup_over_18">Over 18 Years</string>
    <string name="rup_has_verified_email">Has Verified Email?</string>
    <string name="rup_oauth_client_id">OAuth Client Id</string>
    <string name="rup_access_token_id">Access Token Id</string>
    <string name="rup_token_issue_time">Token Issue Time</string>
    <string name="rup_token_expire_time">Token Expire Time</string>
    <string name="url_api_v1_me_karma">https://oauth.reddit.com/api/v1/me/karma</string>
    <string name="url_subreddits_default_json">https://www.reddit.com/subreddits/default.json</string>
    <string name="url_subreddits_mine_subscriber_json">https://oauth.reddit.com/subreddits/mine/subscriber.json</string>
    <string name="oauth_reddit_com_url">https://oauth.reddit.com</string>
    <string name="url_r_subreddit_json_generic">https://www.reddit.com/r/SUBREDDIT.json</string>
    <string name="title_activity_reddit_login">Sign in to R.A.P</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="appwidget_text">R.A.P : Top 2 Trending Posts</string>
    <string name="add_widget">Add widget</string>
    <string name="cd_button_login">Login to / Sign up @ Reddit.com</string>
    <string name="text_button_login">Login to / Sign up @ Reddit.com</string>
    <string name="text_tv_ma_app_intro_1">Reddit is a very interesting social networking site where you can : </string>
    <string name="cd_tv_ma_app_intro_1">Reddit is a very interesting social networking site where you can : </string>
    <string name="text_tv_ma_app_intro_2">Submit posts.</string>
    <string name="cd_tv_ma_app_intro_2">Submit posts.</string>
    <string name="text_tv_ma_app_intro_3">Vote on posts.</string>
    <string name="cd_tv_ma_app_intro_3">Vote on posts.</string>
    <string name="text_tv_ma_app_intro_4">Create communities.</string>
    <string name="cd_tv_ma_app_intro_4">Create communities.</string>
    <string name="text_tv_ma_app_intro_5">Please wait! Loading your reddits. </string>
    <string name="cd_tv_ma_app_intro_5">Please wait! Loading your reddits. </string>
    <string name="text_tv_icons8_button">This project uses free icons,  generously provided by https://icons8.com/android-icons/</string>
    <string name="cd_tv_icons8_button">This project uses free icons,  generously provided by https://icons8.com/android-icons/</string>
    <string name="cd_adView">Google Ads.</string>
    <string name="cd_progressBar2">Progress Bar.</string>
    <string name="cd_v_separator">List Item Separator.</string>
    <string name="cd_iv_thumbnail">Thumbnail.</string>
    <string name="cd_tv_title">Post Title</string>
    <string name="cd_tv_sr_displayname">Subreddit Display Name</string>
    <string name="cd_refresh_button">Refresh Reddits</string>
    <string name="title_refresh_button">Refresh Reddits</string>
    <string name="cd_star_button">User Subscribed Reddits</string>
    <string name="title_star_button">User Subscribed Reddits</string>
    <string name="cd_user_button">User Profile</string>
    <string name="title_user_button">User Profile</string>
    <string name="cd_tv_post_type">Post Type</string>
    <string name="text_tv_post_type_video">Exo Player</string>
    <string name="text_tv_post_type_image">Image View</string>
    <string name="text_tv_post_type_link">Browser</string>
    <string name="SCROLLX">SCROLLX</string>
    <string name="SCROLLY">SCROLLY</string>
    <string name="cd_iv_appwidget_1">Top 1 Post</string>
    <string name="cd_iv_appwidget_2">Top 2 Post</string>
    <string name="cd_iv_post_image">Reddit Post Image</string>
    <string name="cd_iv_thumbs_up">Vote Up</string>
    <string name="cd_iv_thumbs_down">Vote Down</string>
    <string name="cd_iv_share">Share</string>
    <string name="toast_vote_up">Voted Up</string>
    <string name="toast_vote_down">Voted Down</string>
    <string name="toast_no_comments_link">No Comments Link for this Post</string>
    <string name="cd_tv_user_subreddits">User Subreddts</string>
    <string name="text_tv_user_subreddits">User Subreddts</string>
    <string name="cd_tv_user_property_label">Property Name</string>
    <string name="text_tv_user_property_label">Property Name</string>
    <string name="cd_tv_user_property_value">Property Value</string>
    <string name="text_tv_user_property_value">Property Value</string>
    <string name="cd_tv_id_label">Id Label</string>
    <string name="text_tv_id_label">Id Label</string>
    <string name="cd_tv_id_value">Id Value</string>
    <string name="text_tv_id_value">Id Value</string>
    <string name="cd_tv_name_label">Name Label</string>
    <string name="text_tv_name_label">Name Label</string>
    <string name="cd_tv_name_value">Name Value</string>
    <string name="text_tv_name_value">Name Value</string>
    <string name="cd_tv_created_label">Created Label</string>
    <string name="text_tv_created_label">Created Label</string>
    <string name="cd_tv_created_value">Created Value</string>
    <string name="text_tv_created_value">Created Value</string>
    <string name="cd_tv_created_utc_label">Created UTC Label</string>
    <string name="text_tv_created_utc_label">Created UTC Label</string>
    <string name="cd_tv_created_utc_value">Created UTC Value</string>
    <string name="text_tv_created_utc_value">Created UTC Value</string>
    <string name="cd_tv_over_18_label">Over 18 Label</string>
    <string name="text_tv_over_18_label">Over 18 Label</string>
    <string name="cd_tv_over_18_value">Over 18 Value</string>
    <string name="text_tv_over_18_value">Over 18 Value</string>
    <string name="cd_tv_has_verified_email_label">Has Verified Email Label</string>
    <string name="text_tv_has_verified_email_label">Has Verified Email Label</string>
    <string name="cd_tv_has_verified_email_value">Has Verified Email Value</string>
    <string name="text_tv_has_verified_email_value">Has Verified Email Value</string>
    <string name="cd_tv_oauth_client_id_label">OAuth Client Id Label</string>
    <string name="text_tv_oauth_client_id_label">OAuth Client Id Label</string>
    <string name="cd_tv_oauth_client_id_value">OAuth Client Id Value</string>
    <string name="text_tv_oauth_client_id_value">OAuth Client Id Value</string>
    <string name="cd_tv_token_issue_time_label">Token Issue Time Label</string>
    <string name="text_tv_token_issue_time_label">Token Issue Time Label</string>
    <string name="cd_tv_token_issue_time_value">Token Issue Time Value</string>
    <string name="text_tv_token_issue_time_value">Token Issue Time Value</string>
    <string name="cd_tv_token_expire_time_label">Token Expire Time Label</string>
    <string name="text_tv_token_expire_time_label">Token Expire Time Label</string>
    <string name="cd_tv_token_expire_time_value">Token Expire Time Value</string>
    <string name="text_tv_token_expire_time_value">Token Expire Time Value</string>
    <string name="cd_tv_access_token_label">Access Token Label</string>
    <string name="text_tv_access_token_label">Access Token Label</string>
    <string name="cd_tv_access_token_value">Access Token Value</string>
    <string name="text_tv_access_token_value">Access Token Value</string>
    <string name="text_appwidget_text_1">Title 1</string>
    <string name="cd_appwidget_text_1">Title 1</string>
    <string name="text_appwidget_text_2">Title 2</string>
    <string name="cd_appwidget_text_2">Title 2</string>
    <string name="text_tv_title">Title</string>
    <string name="text_tv_spaces_1">\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="cd_tv_spaces_1">Blank spaces</string>
    <string name="text_tv_view_comments">View Comments</string>
    <string name="cd_tv_view_comments">View Comments</string>
</resources>