<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uadnd.cou8901.rap.ui.MainActivity">

    <Button
        android:id="@+id/button_login"
        android:layout_width="350dp"
        android:layout_height="41dp"
        android:onClick="signInToReddit"
        android:textColor="@color/colorPrimary"
        android:text="@string/text_button_login"
        android:contentDescription="@string/cd_button_login"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ma_app_intro_3" />

    <TextView
        android:id="@+id/tv_ma_app_intro_1"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:text="@string/text_tv_ma_app_intro_1"
        android:contentDescription="@string/cd_tv_ma_app_intro_1"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ma_app_intro_2"
        android:layout_width="194dp"
        android:layout_height="36dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/text_tv_ma_app_intro_2"
        android:contentDescription="@string/cd_tv_ma_app_intro_2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ma_app_intro_1" />

    <TextView
        android:id="@+id/tv_ma_app_intro_3"
        android:layout_width="189dp"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_tv_ma_app_intro_3"
        android:contentDescription="@string/cd_tv_ma_app_intro_3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ma_app_intro_2" />

    <TextView
        android:id="@+id/tv_ma_app_intro_4"
        android:layout_width="201dp"
        android:layout_height="43dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="11dp"
        android:text="@string/text_tv_ma_app_intro_4"
        android:contentDescription="@string/cd_tv_ma_app_intro_4"
        android:textColor="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ma_app_intro_3"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:contentDescription="@string/cd_progressBar2"
        android:visibility="invisible"
        android:layout_width="238dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.032"
        app:layout_constraintHorizontal_bias="0.518" />

    <TextView
        android:id="@+id/tv_ma_app_intro_5"
        android:layout_width="355dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="125dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_tv_ma_app_intro_5"
        android:contentDescription="@string/cd_tv_ma_app_intro_5"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="17dp" />


    <TextView
        android:id="@+id/tv_icons8_button"
        android:layout_width="357dp"
        android:layout_height="37dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_tv_icons8_button"
        android:contentDescription="@string/cd_tv_icons8_button"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.545"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintVertical_bias="0.209" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="378dp"
        android:layout_height="73dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cd_adView"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.908"></com.google.android.gms.ads.AdView>
</android.support.constraint.ConstraintLayout>
