<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uadnd.cou8901.rap.ui.DownloadActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:contentDescription="@string/cd_progressBar2"
        android:visibility="visible"
        android:layout_width="238dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.032"
        app:layout_constraintHorizontal_bias="0.518" />

    <TextView
        android:id="@+id/tv_ma_app_intro_5"
        android:layout_width="355dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="43dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_tv_ma_app_intro_5"
        android:contentDescription="@string/cd_tv_ma_app_intro_5"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.538" />

    <TextView
        android:id="@+id/tv_icons8_button"
        android:layout_width="357dp"
        android:layout_height="37dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_tv_icons8_button"
        android:contentDescription="@string/cd_tv_icons8_button"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_ma_app_intro_5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintVertical_bias="0.177" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="378dp"
        android:layout_height="73dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cd_adView"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_icons8_button"
        app:layout_constraintVertical_bias="0.908"
        app:layout_constraintHorizontal_bias="0.4"></com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>
